@@ -1,4 +1,6 @@
 1.3.0
+	improve pty read speed
+	improve logging detail
 	allow spandsp-v17rx fast-train to be more-permissive
 	update to spandsp-0.0.6
 	fix problem on some platforms triggered by large clock skips
